--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,28 +1,21 @@
 ---
 driver:
   name: docker
-  socket: tcp://weirdscience:2375
-  # name: vagrant
-  # require_chef_omnibus: 12.19.36
-
-
+  socket: tcp://localhost:2375
+  # use_sudo: false
+  
 provisioner:
-  name: docker
   name: chef_zero
+  # You may wish to disable always updating cookbooks in CI or other testing environments.
+  # For example:
+  #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
 
 verifier:
   name: inspec
 
-transport:
-  # name: winrm
-  # elevated: true
-  
 platforms:
-  # - name: windows-2012r2
-  #   driver:
-  #     customize:
-  #       memory: 4096
+  - name: ubuntu
 
 suites:
   - name: default
@@ -30,8 +23,5 @@ suites:
       - recipe[poolse::default]
     verifier:
       inspec_tests:
-        - test/recipes
+        - test/smoke/default
     attributes:
-    driver:
-      network:
-        # - ["private_network", { ip: "172.28.128.11" }]        
